Fix line height on smaller screens

--- a/sass/parts/_article.scss
+++ b/sass/parts/_article.scss
@@ -27,6 +27,7 @@ article {
     padding-bottom: .75em;
     @media screen and (max-width: 620px) {
       font-size: 24px;
+      line-height: 1.5;
     }
 
   }
